# CreateToPlay

./: .gitignore  CMakeLists.txt  CMakePresets.json  railway.toml
assets/shaders/: bloom_extract.frag  blur.frag  composite.frag  phong.frag  phong.vert  shadow.frag
builddist/assets/: server.txt
builddist/assets/shaders/: quad.vert  shadow.vert
cmake/: ApplyImGuizmoStudioPatch.cmake  FetchDependencies.cmake
server/: CMakeLists.txt  Dockerfile  main.cpp
src/: main.cpp
src/auth/: AuthClient.cpp  AuthClient.h  FriendClient.cpp  FriendClient.h
src/camera/: Camera.cpp  Camera.h
src/character/: Character.cpp  Character.h  CharacterController.cpp  CharacterController.h
src/core/: Engine.cpp  Engine.h  Window.cpp  Window.h
src/embedded/: EmbeddedAssets.h  EmbeddedFont.h
src/input/: InputManager.cpp  InputManager.h
src/net/: NetClient.cpp  NetClient.h  NetProtocol.h
src/physics/: PhysicsUtils.h  PhysicsWorld.cpp  PhysicsWorld.h
src/renderer/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/scene/: BasePart.cpp  BasePart.h  Workspace.cpp  Workspace.h
src/ui/: CoreGui.cpp  CoreGui.h
studio/: EditorScene.cpp  EditorScene.h  StudioApp.cpp  StudioApp.h  StudioCamera.cpp  StudioCamera.h  StudioGui.cpp  StudioGui.h  StudioRenderer.cpp  StudioRenderer.h  main.cpp
